--- a/overlay/common/packages/apps/Settings/packages/SystemUI/res/values/purenexus_colors.xml
+++ b/overlay/common/packages/apps/Settings/packages/SystemUI/res/values/purenexus_colors.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2017 The Pure Nexus Project
-
+<!-- Copyright (C) 2016 The Pure Nexus Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
           http://www.apache.org/licenses/LICENSE-2.0
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -15,15 +12,8 @@
 -->
 
 <resources>
-    <!-- Android system notifications color -->
-    <color name="system_notification_accent_color">@*android:color/accent_device_default_light</color>
-    <!-- System error color -->
-    <color name="system_error">#ffea4335</color> <!-- deep orange 600 -->
-    <!-- Default user icon colors -->
-    <color name="user_icon_1">#ff5e97f6</color>
-    <color name="user_icon_2">#ff5c6bc0</color>
-    <color name="user_icon_3">#ff26a69a</color>
-    <color name="user_icon_4">#ffec407a</color>
-    <color name="user_icon_5">#ff33ac71</color>
-    <color name="user_icon_8">#ffff7043</color>
+
+    <!-- Volume panel border coler -->
+    <color name="volume_panel_border_color">#ff2962ff</color><!-- blue A700 -->
+
 </resources>
