--- a/overlay/common/packages/apps/ManagedProvisioning/res/values/vendor_required_apps_managed_user.xml
+++ b/overlay/common/packages/apps/ManagedProvisioning/res/values/vendor_required_apps_managed_user.xml
@@ -15,9 +15,14 @@
      limitations under the License.
 -->
 <resources>
-    <string-array name="vendor_required_apps_managed_profile">
+    <string-array name="vendor_required_apps_managed_user">
         <item>com.android.vending</item>
         <item>com.google.android.gms</item>
         <item>com.google.android.contacts</item>
+        <item>com.google.android.googlequicksearchbox</item>
+        <item>com.google.android.launcher</item>
+        <item>com.android.launcher</item>
+        <item>com.google.android.dialer</item>
+        <item>com.google.android.apps.messaging</item>
     </string-array>
 </resources>
